--- a/env/prod.env
+++ b/env/prod.env
@@ -3,9 +3,9 @@ POSTGRES_USER=postgres
 POSTGRES_DB=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-DEFAULT_FROM_EMAIL=students@propulsionacademy.com
+DEFAULT_FROM_EMAIL=xaw@xaw.com
 EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=students@propulsionacademy.com
-EMAIL_HOST_PASSWORD=Ahsdfhj83j3h4rwfeoiuhas83dbj3j3dmnvbl
+EMAIL_HOST_USER=xaw@xaw.com
+EMAIL_HOST_PASSWORD=NoPassword
 EMAIL_PORT=587
 DJANGO_DEBUG=False
